testsuite/tests/rewriting_errors/unit_checker/test.out
custom.lkql:1:1: error: Auto fixes not available for unit checks
  1 |  @unit_check(
    | _^
    ||
    || ~~~ 2 other lines ~~~
    ||
  4 || )
    ||_^

error: Unknown rule name "custom"

